@@ -1,225 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.3//EN"
-"http://www.oasis-open.org/docbook/xml/4.3/docbookx.dtd"
-[
-<!ENTITY % local.common.attrib "xmlns:xi  CDATA  #FIXED 'http://www.w3.org/2003/XInclude'">
-]>
-
-<!-- Permission is granted to copy, distribute and/or modify this document -->
-<!-- under the terms of the GNU Free Documentation License, Version 1.3 -->
-<!-- or any later version published by the Free Software Foundation; -->
-<!-- with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts. -->
-<!-- A copy of the license is included in the section entitled "GNU -->
-<!-- Free Documentation License". -->
-
-<book id="index">
-  <bookinfo>
-    <title>GSequencer Reference Manual</title>
-    <releaseinfo>
-      for libgsequencer-0.7
-      The latest version of this documentation can be found on-line at
-      <ulink role="online-location" url="http://gsequencer.org/api/libgsequencer-0.7/index.html">http://gsequencer.org/api/libgsequencer-0.7/</ulink>.
-    </releaseinfo>
-  </bookinfo>
-
-  <part id="libgsequencer">
-    <title>Graphical user interface</title>
-
-    <xi:include href="xml/ags_audio_preferences.xml"/>
-    <xi:include href="xml/ags_audio_preferences_callbacks.xml"/>
-    <xi:include href="xml/ags_automation_editor.xml"/>
-    <xi:include href="xml/ags_automation_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_automation_window.xml"/>
-    <xi:include href="xml/ags_bulk_member.xml"/>
-    <xi:include href="xml/ags_bulk_member_callbacks.xml"/>
-    <xi:include href="xml/ags_dssi_browser.xml"/>
-    <xi:include href="xml/ags_dssi_browser_callbacks.xml"/>
-    <xi:include href="xml/ags_editor.xml"/>
-    <xi:include href="xml/ags_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_effect_bridge.xml"/>
-    <xi:include href="xml/ags_effect_bridge_callbacks.xml"/>
-    <xi:include href="xml/ags_effect_bulk.xml"/>
-    <xi:include href="xml/ags_effect_bulk_callbacks.xml"/>
-    <xi:include href="xml/ags_effect_line.xml"/>
-    <xi:include href="xml/ags_effect_line_callbacks.xml"/>
-    <xi:include href="xml/ags_effect_pad.xml"/>
-<!--    <xi:include href="xml/ags_effect_pad_callbacks.xml"/>    -->
-    <xi:include href="xml/ags_export_window.xml"/>
-    <xi:include href="xml/ags_export_window_callbacks.xml"/>
-    <xi:include href="xml/ags_file_selection.xml"/>
-    <xi:include href="xml/ags_file_selection_callbacks.xml"/>
-    <xi:include href="xml/ags_generic_preferences.xml"/>
-    <xi:include href="xml/ags_generic_preferences_callbacks.xml"/>
-    <xi:include href="xml/ags_gui_thread.xml"/>
-    <xi:include href="xml/ags_inline_player.xml"/>
-    <xi:include href="xml/ags_ladspa_browser.xml"/>
-    <xi:include href="xml/ags_ladspa_browser_callbacks.xml"/>
-    <xi:include href="xml/ags_lv2_browser.xml"/>
-    <xi:include href="xml/ags_lv2_browser_callbacks.xml"/>
-    <xi:include href="xml/ags_line.xml"/>
-    <xi:include href="xml/ags_line_callbacks.xml"/>
-    <xi:include href="xml/ags_line_editor.xml"/>
-    <xi:include href="xml/ags_line_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_line_member.xml"/>
-    <xi:include href="xml/ags_line_member_callbacks.xml"/>
-    <xi:include href="xml/ags_line_member_editor.xml"/>
-    <xi:include href="xml/ags_line_member_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_link_channel.xml"/>
-    <xi:include href="xml/ags_link_collection_editor.xml"/>
-    <xi:include href="xml/ags_link_collection_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_link_editor.xml"/>
-    <xi:include href="xml/ags_link_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_listing_editor.xml"/>
-    <xi:include href="xml/ags_listing_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_machine.xml"/>
-    <xi:include href="xml/ags_machine_callbacks.xml"/>
-    <xi:include href="xml/ags_machine_editor.xml"/>
-    <xi:include href="xml/ags_machine_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_menu_bar.xml"/>
-    <xi:include href="xml/ags_menu_bar_callbacks.xml"/>
-    <xi:include href="xml/ags_midi_dialog.xml"/>
-    <xi:include href="xml/ags_navigation.xml"/>
-    <xi:include href="xml/ags_navigation_callbacks.xml"/>
-    <xi:include href="xml/ags_pad.xml"/>
-    <xi:include href="xml/ags_pad_callbacks.xml"/>
-    <xi:include href="xml/ags_pad_editor.xml"/>
-    <xi:include href="xml/ags_pad_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_performance_preferences.xml"/>
-    <xi:include href="xml/ags_plugin_browser.xml"/>
-    <xi:include href="xml/ags_plugin_browser_callbacks.xml"/>
-    <xi:include href="xml/ags_plugin_preferences.xml"/>
-    <xi:include href="xml/ags_preferences.xml"/>
-    <xi:include href="xml/ags_preferences_callbacks.xml"/>
-    <xi:include href="xml/ags_property_collection_editor.xml"/>
-    <xi:include href="xml/ags_property_collection_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_property_editor.xml"/>
-    <xi:include href="xml/ags_property_editor_callbacks.xml"/>
-    <xi:include href="xml/ags_property_listing_editor.xml"/>
-    <xi:include href="xml/ags_resize_editor.xml"/>
-    <xi:include href="xml/ags_server_preferences.xml"/>
-    <xi:include href="xml/ags_window.xml"/>
-    <xi:include href="xml/ags_window_callbacks.xml"/>
-    <xi:include href="xml/ags_xorg_application_context.xml"/>
-
-    <chapter id="gsequencer-file">
-      <title>GSequencer files - Reading/Writing data from disk</title>
-      
-      <xi:include href="xml/ags_gui_file_xml.xml"/>
-      <xi:include href="xml/ags_simple_file.xml"/>
-    </chapter>
-
-    <chapter id="gsequencer-task">
-      <title>GSequencer tasks - Data exchanged between Audio and GUI</title>
-      
-      <xi:include href="xml/ags_add_bulk_member.xml"/>
-      <xi:include href="xml/ags_blink_cell_pattern_cursor.xml"/>
-      <xi:include href="xml/ags_change_indicator.xml"/>
-      <xi:include href="xml/ags_change_tact.xml"/>
-      <xi:include href="xml/ags_display_tact.xml"/>
-      <xi:include href="xml/ags_scroll_on_play.xml"/>
-      <xi:include href="xml/ags_toggle_led.xml"/>
-      <xi:include href="xml/ags_toggle_pattern_bit.xml"/>
-      <xi:include href="xml/ags_update_bulk_member.xml"/>
-      <xi:include href="xml/ags_simple_file_read.xml"/>
-      <xi:include href="xml/ags_simple_file_write.xml"/>
-    </chapter>
-
-    <chapter id="import">
-      <title>Import - Wizards to import foreign data</title>
-      
-      <xi:include href="xml/ags_midi_import_wizard.xml"/>
-      <xi:include href="xml/ags_midi_import_wizard_callbacks.xml"/>
-      <xi:include href="xml/ags_track_collection.xml"/>
-      <xi:include href="xml/ags_track_collection_mapper.xml"/>
-    </chapter>
-    
-    <chapter id="editor">
-      <title>Editor - Piano roll and its controls</title>
-      
-      <xi:include href="xml/ags_automation_edit.xml"/>
-      <xi:include href="xml/ags_automation_edit_callbacks.xml"/>
-      <xi:include href="xml/ags_automation_area.xml"/>
-      <xi:include href="xml/ags_automation_toolbar.xml"/>
-      <xi:include href="xml/ags_automation_toolbar_callbacks.xml"/>
-      <xi:include href="xml/ags_toolbar_mode_stock.xml"/>
-      <xi:include href="xml/ags_toolbar.xml"/>
-      <xi:include href="xml/ags_toolbar_callbacks.xml"/>
-      <xi:include href="xml/ags_machine_selection.xml"/>
-      <xi:include href="xml/ags_machine_selector.xml"/>
-      <xi:include href="xml/ags_machine_selector_callbacks.xml"/>
-      <xi:include href="xml/ags_machine_radio_button.xml"/>
-      <xi:include href="xml/ags_meter.xml"/>
-      <xi:include href="xml/ags_meter_callbacks.xml"/>
-      <xi:include href="xml/ags_notebook.xml"/>
-      <xi:include href="xml/ags_notebook_callbacks.xml"/>
-      <xi:include href="xml/ags_note_edit.xml"/>
-      <xi:include href="xml/ags_note_edit_callbacks.xml"/>
-      <xi:include href="xml/ags_pattern_edit.xml"/>
-      <xi:include href="xml/ags_pattern_edit_callbacks.xml"/>
-      <xi:include href="xml/ags_scale_area.xml"/>
-      <xi:include href="xml/ags_scale_callbacks.xml"/>
-      <xi:include href="xml/ags_scale.xml"/>
-      <xi:include href="xml/ags_scale_callbacks.xml"/>
-      <xi:include href="xml/ags_scale.xml"/>
-      <xi:include href="xml/ags_sf2_chooser.xml"/>
-      <xi:include href="xml/ags_sf2_chooser_callbacks.xml"/>
-    </chapter>
-
-    <chapter id="engines">
-      <title>Engines - Composite widgets with audio set up</title>
-
-      <xi:include href="xml/ags_panel.xml"/>
-      <xi:include href="xml/ags_panel_callbacks.xml"/>
-      <xi:include href="xml/ags_panel_input_line.xml"/>
-      <xi:include href="xml/ags_panel_input_pad.xml"/>
-      <xi:include href="xml/ags_mixer.xml"/>
-      <xi:include href="xml/ags_mixer_callbacks.xml"/>
-      <xi:include href="xml/ags_mixer_input_line.xml"/>
-      <xi:include href="xml/ags_mixer_input_pad.xml"/>
-      <xi:include href="xml/ags_drum.xml"/>
-      <xi:include href="xml/ags_drum_callbacks.xml"/>
-      <xi:include href="xml/ags_drum_input_line.xml"/>
-      <xi:include href="xml/ags_drum_input_line_callbacks.xml"/>
-      <xi:include href="xml/ags_drum_input_pad.xml"/>
-      <xi:include href="xml/ags_drum_input_pad_callbacks.xml"/>
-      <xi:include href="xml/ags_drum_output_line.xml"/>
-      <xi:include href="xml/ags_drum_output_line_callbacks.xml"/>
-      <xi:include href="xml/ags_drum_output_pad.xml"/>
-      <xi:include href="xml/ags_drum_output_pad_callbacks.xml"/>
-      <xi:include href="xml/ags_pattern_box.xml"/>
-      <xi:include href="xml/ags_pattern_box_callbacks.xml"/>
-      <xi:include href="xml/ags_matrix.xml"/>
-      <xi:include href="xml/ags_matrix_callbacks.xml"/>
-      <xi:include href="xml/ags_matrix_bridge.xml"/>
-      <xi:include href="xml/ags_matrix_bulk_input.xml"/>
-      <xi:include href="xml/ags_cell_pattern.xml"/>
-      <xi:include href="xml/ags_cell_pattern_callbacks.xml"/>
-      <xi:include href="xml/ags_synth.xml"/>
-      <xi:include href="xml/ags_synth_callbacks.xml"/>
-      <xi:include href="xml/ags_synth_input_line.xml"/>
-      <xi:include href="xml/ags_synth_input_pad.xml"/>
-      <xi:include href="xml/ags_oscillator.xml"/>
-      <xi:include href="xml/ags_oscillator_callbacks.xml"/>
-      <xi:include href="xml/ags_ffplayer.xml"/>
-      <xi:include href="xml/ags_ffplayer_callbacks.xml"/>
-      <xi:include href="xml/ags_ffplayer_bridge.xml"/>
-      <xi:include href="xml/ags_ffplayer_bulk_input.xml"/>
-      <xi:include href="xml/ags_ffplayer_input_line.xml"/>
-      <xi:include href="xml/ags_ffplayer_input_line_callbacks.xml"/>
-      <xi:include href="xml/ags_ffplayer_input_pad.xml"/>
-      <xi:include href="xml/ags_ladspa_bridge.xml"/>
-      <xi:include href="xml/ags_dssi_bridge.xml"/>
-      <xi:include href="xml/ags_lv2_bridge.xml"/>
-    </chapter>
-  </part>
-    
-  <index id="api-index-full">
-    <title>API Index</title>
-    <xi:include href="xml/api-index-full.xml"><xi:fallback /></xi:include>
-  </index>
-  <index id="deprecated-api-index" role="deprecated">
-    <title>Index of deprecated API</title>
-    <xi:include href="xml/api-index-deprecated.xml"><xi:fallback /></xi:include>
-  </index>
-  
-</book>
