@@ -1,3 +1,8 @@
+ags (0.7.120)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved Makefile.am use install instead of cp
+
 ags (0.7.119)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
